Mon Sep 03 19:16:37 BST 2007  Olly Betts <olly@survex.com>

	* docs/overview.txt,omindex.cc: Add support for indexing AbiWord
	  documents.

Thu Jul 05 00:37:35 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Final (?) update for 1.0.2.

Thu Jul 05 00:33:14 BST 2007  Olly Betts <olly@survex.com>

	* omindex.cc: Report files we aren't indexing because their extensions
	  aren't recognised.

Wed Jul 04 21:22:02 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Update with release date for release 1.0.2

Wed Jul 04 20:43:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* configure.ac: Bump version to 1.0.2.

Wed Jul 04 17:34:15 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Jul 04 17:31:38 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc,query.cc: Use stringutils.h from common.
	* ./: Update common SVN rev in svn:externals to get the latest
	  stringutils.h.
	* cgiparam.cc: Use string::resize() rather than assigning from a
	  substring of the string.

Mon Jul 02 16:42:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* htmlparsetest.cc,md5test.cc: Add #include <stdlib.h>, to get a
	  defintion for exit().  Fixes compilation with gcc-snapshot.

Thu Jun 28 18:05:18 BST 2007  Olly Betts <olly@survex.com>

	* omindex.cc: If --url isn't passed, default to "/", but print a
	  warning noting that this default has been used (at least for now).

Thu Jun 28 18:04:53 BST 2007  Olly Betts <olly@survex.com>

	* docs/scriptindex.txt: Fix typo.

Wed Jun 27 15:44:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Remove the items which aren't really interesting to users.

Wed Jun 27 14:26:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/: Update svn:externals property to use latest version.

	* NEWS: Updated.

Sat Jun 23 13:11:15 BST 2007  Olly Betts <olly@survex.com>

	* diritor.h: Delete random extra blank line.

Sat Jun 23 13:08:35 BST 2007  Olly Betts <olly@survex.com>
