@@ -1,3 +1,8 @@
+Thu Sep 06 00:24:54 BST 2007  Olly Betts <olly@survex.com>
+
+	* myhtmlparse.cc: Add '#include <config.h>'.
+	* omega.h: Don't '#include <config.h>'.
+
 Mon Sep 03 19:16:37 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/overview.txt,omindex.cc: Add support for indexing AbiWord
